sass/popup.scss
@import "ui";

// Structure

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

[v-cloak] {
  display: none;
}

body {
  width: 320px;
  height: 480px;
  transform-origin: left top;
  overflow: hidden;
  font-family: arial, "Microsoft YaHei";
  font-size: 16px;
  cursor: default;
  user-select: none;
}

svg {
  pointer-events: none;
}

.icon {
  @include themify($themes) {
    fill: themed("grey-1");
  }
  vertical-align: middle;
  svg {
    height: 16px;
    width: 16px;
  }
}

#codeClipboard {
  position: absolute;
  top: -1000px;
}

// Header
.header {
  height: 38px;
  line-height: 38px;
  position: relative;
  text-align: center;
  font-size: 16px;
  @include themify($themes) {
    color: themed("black-1");
    background: themed("white-1");
    border-bottom: themed("grey-2") 1px solid;
  }

  .icon {
    @include hover-black;
    cursor: pointer;

    svg {
      vertical-align: sub;
    }
  }
}

#i-menu,
#i-plus {
  position: absolute;
  left: 20px;
  bottom: 0;
}

#i-lock {
  position: absolute;
  left: 45px;
  bottom: 0;
}

#i-sync {
  position: absolute;
  left: 70px;
  bottom: 0;
  cursor: default;
  @include themify($themes) {
    fill: themed("grey-2");
  }

  &:hover {
    svg {
      fill: inherit;
    }
  }
}

#i-qr {
  position: absolute;
  right: 45px;
  bottom: 0;
}

#i-edit {
  position: absolute;
  right: 20px;
  bottom: 0;
}

#i-close {
  position: absolute;
  left: 20px;
  bottom: 0;
}

// Search & Filter
.under-header {
  padding: 0 10px;
  margin-left: 10px;
  font-size: 12px;
  height: 24px;
  line-height: 24px;
  cursor: pointer;
  display: none;
}

#filter {
  @include themify($themes) {
    background: themed("yellow-2");
  }

  &:hover {
    @include themify($themes) {
      background: themed("yellow-1");
    }
  }
}

#search {
  position: relative;
  @include themify($themes) {
    background: themed("white-1");
    border: themed("grey-2") 1px solid;
    border-top: none;
  }

  &:hover {
    @include themify($themes) {
      background: themed("white-search");
    }
  }

  input {
    font-family: arial, "Microsoft YaHei";
    background: none;
    border: none;
    width: 100%;
    height: 100%;
    @include themify($themes) {
      color: themed("black-search");
    }
  }

  #searchHint {
    position: absolute;
    top: -1px;
    right: 0px;
    padding-right: 10px;
    display: grid;
    grid-template-rows: 4.5px 15px 4.5px;
    grid-template-columns: 15px;
  }

  #searchHintBorder {
    @include themify($themes) {
      color: themed("white-1");
      background: themed("grey-search");
    }
    text-align: center;
    border-radius: 1.5px;
    line-height: 16px;
    font-weight: bolder;
  }
}

// Codes
#codes {
  height: 442px;
  overflow-x: hidden;
  overflow-y: hidden;
  @include themify($themes) {
    background: themed("grey-background");
  }
  padding-right: 10px;

  .deleteAction {
    @include themify($themes) {
      @include icon-special(20px, themed("red-1"));
    }
    position: absolute;
    top: -10px;
    left: -10px;
    z-index: 10;
    display: none;
  }

  &:hover {
    padding-right: 0;
    overflow-y: scroll;
  }

  &.edit {
    .code {
      @include themify($themes) {
        color: themed("grey-2") !important;
      }
      user-select: none;
      cursor: default;
    }

    .issuer,
    .showqr,
    .showqr.hidden,
    .pin {
      display: none;
    }

    .issuerEdit,
    .movehandle,
    #add {
      display: block;
    }

    .deleteAction {
      display: block;
      cursor: pointer;
    }

    .sector,
    .counter {
      position: absolute;
      left: -1000px;
      opacity: 0;
    }
  }

  &.filter .entry[filtered],
  &.search .entry[notSearched] {
    height: 0;
    margin: 0;
    padding: 0;
    opacity: 0;
    border: none;
    overflow: hidden;
    position: absolute;
  }

  &.filter #filter,
  &.search #search {
    display: block;
  }

  &:not(.edit) {
    // Is this used?
    .entry[unencrypted="true"]:hover .warning {
      height: 24px;
    }

    .code.timeout:not(.hotp) {
      animation: twinkling 1s infinite ease-in-out;
    }
  }
}
/* ... */

